--- a/deploy/docker/Dockerfile.chat
+++ b/deploy/docker/Dockerfile.chat
@@ -1,5 +1,5 @@
 # Build stage
-FROM golang:1.23.4-alpine AS builder
+FROM golang:1.23-alpine AS builder
 
 WORKDIR /app
 
@@ -14,7 +14,7 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o /app/bin/chat ./cmd/chat
 
 # Runtime stage
-FROM alpine:3.17
+FROM alpine:latest
 
 RUN apk --no-cache add ca-certificates tzdata && \
     adduser -D -g '' appuser
@@ -23,8 +23,6 @@ WORKDIR /app
 
 # Copy the binary from builder stage
 COPY --from=builder /app/bin/chat .
-COPY config/chat.env /app/config/chat.env
-COPY config/.env /app/config/.env
 
 # Use non-root user
 USER appuser
