upd api gateway

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ config/*.env
 !config/.env.example
 
 deploy/compose/docker-compose.yaml
+deploy/compose/.env
 
 config/*.yaml
 !config/config.yaml.example
