--- a/config/.env.example
+++ b/config/.env.example
@@ -11,3 +11,9 @@ server.port=8080                # HTTP port to listen on
 server.host=0.0.0.0             # Host to bind to
 
 # Add service-specific settings below as needed
+
+# RabbitMQ settings
+rabbitmq.host=rabbitmq          # RabbitMQ host
+rabbitmq.port=5672              # RabbitMQ port
+rabbitmq.username=qubool        # RabbitMQ username
+rabbitmq.password=qubool123      # RabbitMQ password
