--- a/deploy/docker/Dockerfile.gateway
+++ b/deploy/docker/Dockerfile.gateway
@@ -1,41 +1,37 @@
-# Build stage
 FROM golang:1.23.4-alpine AS builder
 
 WORKDIR /app
 
-# Copy only what's needed for this service
-COPY pkg/ /app/pkg/
-COPY services/gateway/ /app/services/gateway/
+# Install necessary build tools
+RUN apk add --no-cache git
 
-# Add a replace directive to find the pkg module locally
-RUN echo 'replace github.com/mohamedfawas/qubool-kallyanam/pkg => /app/pkg' >> /app/services/gateway/go.mod
+# Copy the entire services and pkg directories
+COPY services/ ./services/
+COPY pkg/ ./pkg/
 
-# Build without using workspace
-RUN cd /app/services/gateway && \
-    go mod tidy && \
-    CGO_ENABLED=0 GOOS=linux go build -o /app/gateway-service ./cmd/main.go
+# Download dependencies
+WORKDIR /app/services/gateway
+RUN go mod download
 
-# Runtime stage
+# Build the application
+RUN CGO_ENABLED=0 GOOS=linux go build -o /app/gateway-service ./cmd/main.go
+
+# Create final lightweight image
 FROM alpine:latest
+
+RUN apk --no-cache add ca-certificates
+
 WORKDIR /app
-RUN apk --no-cache add ca-certificates tzdata wget jq && update-ca-certificates
 
-RUN echo '#!/bin/sh\n\
-# Try multiple endpoints in sequence\n\
-wget -q -O - http://localhost:8080/api/v1/ping >/dev/null 2>&1 || \n\
-wget -q -O - http://localhost:8080/health >/dev/null 2>&1 || \n\
-wget -q -O - http://localhost:8080/health/live >/dev/null 2>&1\n\
-exit $?' > /app/healthcheck.sh && chmod +x /app/healthcheck.sh
-
+# Copy binary from builder stage
 COPY --from=builder /app/gateway-service .
-COPY --from=builder /app/services/gateway/configs/config.yaml /app/configs/config.yaml
-RUN adduser -D -g '' appuser && chown -R appuser:appuser /app
-USER appuser
-EXPOSE 8080
-# Environment variables for service discovery
-ENV SERVICE_USER_HTTP=user-service:50000 \
-    SERVICE_USER_GRPC=user-service:50001 \
-    SERVICE_AUTH_HTTP=auth-service:50010 \
-    SERVICE_AUTH_GRPC=auth-service:50011 \
+
+# Environment variables
+ENV SERVER_ADDRESS=:8080 \
+    GIN_MODE=debug \
+    AUTH_SERVICE_ADDRESS=auth-service:50011 \
     LOG_LEVEL=debug
-CMD ["./gateway-service", "--config=configs/config.yaml"]
+
+EXPOSE 8080
+
+CMD ["./gateway-service"]
